Update Header for both login & logout state

--- a/.env.development
+++ b/.env.development
@@ -1,20 +1,21 @@
 ACCESS_TOKEN_COOKIE_NAME=edx-jwt-cookie-header-payload
-BASE_URL=localhost:8080
-CREDENTIALS_BASE_URL=http://localhost:18150
+BASE_URL=local.overhang.io
+CREDENTIALS_BASE_URL=null
 CSRF_TOKEN_API_PATH=/csrf/api/v1/token
-ECOMMERCE_BASE_URL=http://localhost:18130
+ECOMMERCE_BASE_URL=null
 LANGUAGE_PREFERENCE_COOKIE_NAME=openedx-language-preference
-LMS_BASE_URL=http://localhost:18000
-STUDIO_BASE_URL=http://localhost:18010
-LOGIN_URL=http://localhost:18000/login
-LOGOUT_URL=http://localhost:18000/logout
-MARKETING_SITE_BASE_URL=http://localhost:18000
+LMS_BASE_URL=http://local.overhang.io:8000/
+STUDIO_BASE_URL=http://studio.local.overhang.io:8001
+LOGIN_URL=http://local.overhang.io:8000/login/
+LOGOUT_URL=http://local.overhang.io:8000/logout
+MARKETING_SITE_BASE_URL=http://local.overhang.io:8000
 ORDER_HISTORY_URL=localhost:1996/orders
-REFRESH_ACCESS_TOKEN_ENDPOINT=http://localhost:18000/login_refresh
+REFRESH_ACCESS_TOKEN_ENDPOINT=http://local.overhang.io:8000/login_refresh
 SEGMENT_KEY=null
-SITE_NAME=Open edX
-USER_INFO_COOKIE_NAME=edx-user-info
-LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
-LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
-LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
-FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
+SITE_NAME=FUNiX
+USER_INFO_COOKIE_NAME=user-info
+LOGO_URL=https://lilac.funix.edu.vn/static/themes/indigo/lms/static/images/logo-funix.png
+LOGO_TRADEMARK_URL=http://local.overhang.io:8000/theming/asset/images/logo.png
+LOGO_WHITE_URL=null
+FAVICON_URL=http://local.overhang.io:8000/favicon.ico
+LOGO_DOWN_URL=http://local.overhang.io:8000/static/indigo/images/down.png
